--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "typeof-literal"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+authors = ["Nathan West <Lucretiel@gmail.com>"]
+
+description = "A macro that returns the type of any literal expression or composite of literals"
+readme = "README.md"
+repository = "https://github.com/Lucretiel/typeof-literal"
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
